--- a/docs/written-part-hand-in-05.tex
+++ b/docs/written-part-hand-in-05.tex
@@ -44,4 +44,22 @@ breaklines=true
 \section{Link to Project on GitHub}
 https://github.com/NewNorthStar/BSDISYS1KU-Assignment-Five
 
+\section{Introduction}
+
+We have implemented an auction system consisting of one or more server nodes conducting a single auction. Clients may connect to any node to bid on the auction. 
+
+\begin{itemize}
+    \item The server nodes act as a single leader system. Followers will forward new bids to the leader. The leader then updates any followers before the method returns. This ensures linearizable state changes as long as the auction is live with atleast one node. 
+    \item When a follower discovers that the leader is unreachable, it will call for an election. This is implemented using the Bully election algorithm, with priority in particular given to the most up-to-date node.
+    \item If a client loses connection to the auction, it will try reconnecting to another known node. Clients know the nodes available their registration, or at their last bid. 
+\end{itemize}
+
+\section{Architecture}
+
+\section{Correctness}
+
+\subsection{Argument 1}
+
+\subsection{Argument 2}
+
 \end{document}
