--- a/docs/written-part-hand-in-05.tex
+++ b/docs/written-part-hand-in-05.tex
@@ -86,8 +86,40 @@ Should the leader node fail, then the \texttt{Election(...)} and \texttt{Coordin
 
 \textit{Argue whether your implementation satisfies linearisability or sequential consistency. In order to do so, first, you must state precisely what such property is.}
 
+\bigbreak
+
+We have implemented single-leader synchronous replication. In order to have a fair auction, we decided that the placement of bids should satisfy linearisability. That is:
+
+\begin{enumerate}
+    \item The leader is at all times the single correct copy of the auction. Followers only provide standby redundancy and bid forwarding. 
+    \item The interleaving of bids is consistent with who is first able to secure the critical section with the leader in real time. 
+\end{enumerate}
+
+\noindent However:
+
+\begin{enumerate}
+    \item Other calls such as \texttt{GetLot}, \texttt{GetAuctionStatus} and \texttt{GetDiscovery} are more leniently implemented. Followers are allowed to resolve these calls with their current information. 
+    \item We have not locked \texttt{PutBid} for other followers during the election. This potentially allows another bid to sneak in front of the election triggering bid. This could perhaps be resolved with a mutual exclusion algorithm as seen in hand-in 4 with additional timestamps. 
+\end{enumerate}
+
 \subsection{Argument 2}
 
 \textit{An argument that your protocol is correct in the absence and the presence of failures.}
+
+\bigbreak
+
+Given reliable message transport, the system will work consistently through the failure of any replica but one. 
+
+\bigbreak
+
+The leader maintains a timestamp that increments with each bid processed. This is part of the \texttt{UpdateNode} call made to follower nodes. When \texttt{PutBid} returns for a client, the new bid will have been replicated across all reachable non-failed followers. We know of one current limitation in our solution: Should the leader fail during a synchronous replication, the bid may persist after an election at other nodes. In this case the client will retry placing the bid with a follower node, and will then receive the correct reply after an election. 
+
+\bigbreak
+
+A Follower will trigger an election if the leader fails to process a forwarded bid. Elections are held using the Bully algorithm, with followers multi-casting their current stats. The node with the highest bidding timestamp takes priority. The election outcome elevates one of the followers to be leader, unseating any existing leader. 
+
+\bigbreak
+
+Assuming that leaders fail cleanly, it is not possible to reconnect to the auction service as a leader. Nodes can only register with the auction leader as followers. Without clean failures we would have to implement additional measures to avoid split-brain scenarios. 
 
 \end{document}
